End call bug fixed on Live monitoring page

--- a/zonoapp/templates/pages/campaign/list_campaign.html
+++ b/zonoapp/templates/pages/campaign/list_campaign.html
@@ -207,7 +207,7 @@
         // Confirm deletion using SweetAlert2
         Swal.fire({
                 title: 'Are you sure?',
-                text: 'Do tou really want to start the campaign '+ campaign_name,
+                text: 'Do you really want to start the campaign '+ campaign_name,
                 icon: 'info',
                 showCancelButton: true,
                 confirmButtonText: 'Yes',
